--- a/styles/theme.css
+++ b/styles/theme.css
@@ -9,8 +9,8 @@
     --gray: #4B4453;
     --alt-bg: #EFE7F0;
     --alt-text: #1C1A1D;
-    --alt-button: rgba(206, 197, 215, 0.89);
-    --input: #c2bee3;
+    --alt-button: rgba(208, 200, 217, 0.89);
+    --input: #b5b1d3;
 }
 
 
@@ -26,7 +26,7 @@
     --alt-bg: #242225;
     --alt-text: #e1d3e8;
     --alt-button: rgb(73, 71, 79);
-    --input: #a19bc5;
+    --input: #8c86ab;
 
 
 
