--- a/styles/all-works.scss
+++ b/styles/all-works.scss
@@ -7,7 +7,7 @@
 
 .works-grid{
   display: grid;
-  padding: 1.5rem 0 0  ;
+  margin: 1.5rem 0 0  ;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 1rem;
 }
